fix footer spacing

--- a/docs/style.css
+++ b/docs/style.css
@@ -9,7 +9,7 @@ body {
   font-size: 13px;
   color: #333;
   -webkit-font-smoothing: antialiased;
-  margin-bottom: 15rem;
+  margin-bottom: 25rem;
 }
 
 .container {
